--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,40 @@
-<div class="footer bg-dark"></div>
+<!-- Footer -->
+<div class="footer bg-dark text-light py-4">
+  <!-- Social Media Buttons -->
+  <div class="social-media text-center mb-3">
+    <button
+      onclick="window.open('https://www.instagram.com', '_blank');"
+      class="btn btn-dark mx-2"
+    >
+      <i class="fab fa-instagram fa-2x"></i>
+    </button>
+    <button
+      onclick="window.open('https://www.gmail.com', '_blank');"
+      class="btn btn-dark mx-2"
+    >
+      <i class="fab fa-google fa-2x"></i>
+    </button>
+    <button
+      onclick="window.open('https://github.com/saurabhkl16', '_blank');"
+      class="btn btn-dark mx-2"
+    >
+      <i class="fab fa-github fa-2x"></i>
+    </button>
+    <button
+      onclick="window.open('https://www.linkedin.com/in/saurabh-lomte-188a68216/', '_blank');"
+      class="btn btn-dark mx-2"
+    >
+      <i class="fab fa-linkedin fa-2x"></i>
+    </button>
+  </div>
+
+  <!-- Email Section -->
+  <div class="email text-center mb-1">
+    <p>aiinterviewer&#64;gmail.com</p>
+  </div>
+
+  <!-- Copyright Section -->
+  <div class="copyright text-center">
+    <p>&copy; 2025 AI Interviewer. All Rights Reserved.</p>
+  </div>
+</div>
