--- a/src/app/manually-add-questions/manually-add-questions.component.html
+++ b/src/app/manually-add-questions/manually-add-questions.component.html
@@ -1,24 +1,23 @@
-<p>manually-add-questions works!</p>
 <div class="container mt-4">
-  <h2>AI Interviewer</h2>
+  <h4>Add question you want to prepare</h4>
   <textarea
     [(ngModel)]="newQuestion"
     class="form-control"
     placeholder="Enter a question"
   ></textarea>
-  <button class="btn btn-primary mt-2" (click)="addQuestion()">
+  <button class="btn btn-primary mt-3 me-3" (click)="addQuestion()">
     Add Question
   </button>
   <button
-    class="btn btn-success mt-2"
+    class="btn btn-success mt-3 me-3"
     (click)="startInterview()"
-    [disabled]="questions.length === 0"
+    [disabled]="questions().length === 0"
   >
     Start Interview
   </button>
 
-  <div *ngIf="currentQuestion" class="mt-3">
+  <div *ngIf="currentQuestion()" class="mt-3">
     <h4>AI asks:</h4>
-    <p class="alert alert-info">{{ currentQuestion }}</p>
+    <p class="alert alert-info">{{ currentQuestion() }}</p>
   </div>
 </div>
