--- a/src/app/navebar/navebar.component.html
+++ b/src/app/navebar/navebar.component.html
@@ -8,7 +8,7 @@
       <li class="nav-item active">
         <a class="nav-link text-light" [routerLink]="'/home'">Home</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link text-light" [routerLink]="'/features'">Features</a>
       </li>
       <li class="nav-item">
