--- a/src/app/meeting/meeting.component.html
+++ b/src/app/meeting/meeting.component.html
@@ -29,8 +29,8 @@
     <button class="btn btn-dark me-3" (click)="nextQuestion()">
       Next<i class="bi bi-arrow-right"></i>
     </button>
-    <!-- <button class="btn btn-danger me-3" (click)="toggleRecording()">
+    <button class="btn btn-danger me-3" (click)="toggleRecording()">
       {{ recording ? "Stop & Save Recording" : "Start Recording" }}
-    </button> -->
+    </button>
   </div>
 </div>
